removing resize to textarea

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                     <input type="text" name="subject" id="subject" placeholder="Subject">
                 </label>
                 <label for="message">
-                    <textarea id="message" placeholder="Your message"></textarea>
+                    <textarea id="message" placeholder="Your message" style="resize: none"></textarea>
                 </label>
                 <button type="submit" class="btn">
                     Submit
@@ -174,7 +174,7 @@
     }
     // Get the modal
     const modal = document.getElementById("myModal");
-    
+
     // Get the button that opens the modal
     var btn = document.getElementById("contact-btn");
 
