--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <button class='btn'>Get in Touch</button>
     </div>
   </section>
-  <section id="about-us">
+  <section id='bout-us''>
     <div class='about-us__wrapper'>
       <div class='about-us__authors'>
         <h3>Nastya</h3>
