chore(mobile-responsive): adding services responsiveness and extra changes

--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@
             <img src="assets/main/main-mobile.svg" alt="" />
             <img src="assets/main/main-pc.svg" alt="" />
           </div>
-          <button class="btn">Get in Touch</button>
         </div>
       </section>
       <section id="about-us">
@@ -71,7 +70,6 @@
               creating robust and scalable websites, e-commerce platforms, and
               content management systems.
             </p>
-            <button class="btn contact-us__mobile">Get in Touch</button>
           </div>
           <div class="about-us__authors">
             <h3>Mika</h3>
@@ -90,16 +88,19 @@
             <h4>Web Design</h4>
           </div>
           <div class="services__card services__card--top">
-            <img src="assets/services/mobile-app.svg" alt="Web Design" />
-            <h4>Mobile App</h4>
+            <img
+              src="assets/services/mobile-app.svg"
+              alt="Mobile Development"
+            />
+            <h4>Mobile Development</h4>
           </div>
           <div class="services__card services__card--bottom">
-            <img src="assets/services/web-dev.svg" alt="Web Design" />
+            <img src="assets/services/web-dev.svg" alt="Web Development" />
             <h4>Web Development</h4>
           </div>
           <div class="services__card services__card--bottom">
-            <img src="assets/services/ux-research.svg" alt="Web Design" />
-            <h4>Mobile App</h4>
+            <img src="assets/services/ux-research.svg" alt="UX Research" />
+            <h4>UX Research</h4>
           </div>
         </div>
       </section>
@@ -158,6 +159,7 @@
           </div>
         </div>
       </section>
+      <button class="btn mobile-btn-contact-us">Get in Touch</button>
     </main>
     <!-- The Modal -->
     <div id="myModal" class="modal">
