feat(mobile): adding mobile responsive to tech-stack section

--- a/index.html
+++ b/index.html
@@ -108,57 +108,65 @@
         </div>
       </section>
       <section id="tech-stack">
-        <div class="tech-stack__grid">
-          <div class="tech-stack__img">
-            <img src="assets/tech-stack/figma.svg" alt="" />
+        <div class="tech-stack__wrapper">
+          <div class="tech-stack__grid">
+            <div class="tech-stack__img">
+              <img src="assets/tech-stack/figma.svg" alt="" />
+            </div>
           </div>
-        </div>
-        <div class="tech-stack__grid">
-          <div class="tech-stack__line">
-            <img src="assets/tech-stack/line-top-left.svg" alt="" />
+          <div class="tech-stack__grid">
+            <div class="tech-stack__line">
+              <img src="assets/tech-stack/line-top-left.svg" alt="" />
+            </div>
+            <div class="tech-stack__line">
+              <img src="assets/tech-stack/line-top-right.svg" alt="" />
+            </div>
           </div>
-          <div class="tech-stack__line">
-            <img src="assets/tech-stack/line-top-right.svg" alt="" />
+          <div class="tech-stack__grid">
+            <div class="tech-stack__img lg-hidden">
+              <img src="assets/tech-stack/figma.svg" alt="" />
+            </div>
+            <div class="tech-stack__img">
+              <img src="assets/tech-stack/adobe.svg" alt="" />
+            </div>
+            <div class="tech-stack__img">
+              <img src="assets/tech-stack/sketch.svg" alt="" />
+            </div>
           </div>
-        </div>
-        <div class="tech-stack__grid">
-          <div class="tech-stack__img">
-            <img src="assets/tech-stack/adobe.svg" alt="" />
+          <div class="tech-stack__grid">
+            <div class="tech-stack__line">
+              <img src="assets/tech-stack/line-middle-left.svg" alt="" />
+            </div>
+            <div class="tech-stack__line">
+              <img src="assets/tech-stack/line-middle-right.svg" alt="" />
+            </div>
           </div>
-          <div class="tech-stack__img">
-            <img src="assets/tech-stack/sketch.svg" alt="" />
+          <div class="tech-stack__grid">
+            <div class="tech-stack__img lg-hidden">
+              <img src="assets/tech-stack/nodejs.svg" alt="" />
+            </div>
+            <div class="tech-stack__img">
+              <img src="assets/tech-stack/react.svg" alt="" />
+            </div>
+            <div class="tech-stack__img">
+              <img src="assets/tech-stack/angular.svg" alt="" />
+            </div>
           </div>
-        </div>
-        <div class="tech-stack__grid">
-          <div class="tech-stack__line">
-            <img src="assets/tech-stack/line-middle-left.svg" alt="" />
+          <div class="tech-stack__grid">
+            <div class="tech-stack__line">
+              <img src="assets/tech-stack/line-bottom-left.svg" alt="" />
+            </div>
+            <div class="tech-stack__line">
+              <img src="assets/tech-stack/line-bottom-right.svg" alt="" />
+            </div>
           </div>
-          <div class="tech-stack__line">
-            <img src="assets/tech-stack/line-middle-right.svg" alt="" />
-          </div>
-        </div>
-        <div class="tech-stack__grid">
-          <div class="tech-stack__img">
-            <img src="assets/tech-stack/react.svg" alt="" />
-          </div>
-          <div class="tech-stack__img">
-            <img src="assets/tech-stack/angular.svg" alt="" />
-          </div>
-        </div>
-        <div class="tech-stack__grid">
-          <div class="tech-stack__line">
-            <img src="assets/tech-stack/line-bottom-left.svg" alt="" />
-          </div>
-          <div class="tech-stack__line">
-            <img src="assets/tech-stack/line-bottom-right.svg" alt="" />
-          </div>
-        </div>
-        <div class="tech-stack__grid">
-          <div class="tech-stack__img">
-            <img src="assets/tech-stack/nodejs.svg" alt="" />
-          </div>
-          <div class="tech-stack__img">
-            <img src="assets/tech-stack/sass.svg" alt="" />
+          <div class="tech-stack__grid">
+            <div class="tech-stack__img">
+              <img src="assets/tech-stack/nodejs.svg" alt="" />
+            </div>
+            <div class="tech-stack__img">
+              <img src="assets/tech-stack/sass.svg" alt="" />
+            </div>
           </div>
         </div>
       </section>
